--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="lib/css/style.css" defermedia="screen">
     <link rel="stylesheet" href="lib/css/output.css" defermedia="screen">
-    <link rel="stylesheet" href="node_modules/flowbite/dist/flowbite.css">
+    <link rel="stylesheet" href="lib/css/flowbite.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 
     <script id="youtube-hd-fjdmkanbdloodhegphphhklnjfngoffa">
@@ -1512,7 +1512,7 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script src="node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="lib/css/dist/flowbite.min.js"></script>
     <script src="lib/js/navlink.js"></script>
     <script src="lib/js/navbar.js"></script>
     <script src="lib/js/testimonial.js"></script>
