redesign iproc-2go

--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -334,16 +334,8 @@
                     </div>
                 </div>
 
-                <!-- Tombol Toggle Detail -->
-                <div class="text-center my-6">
-                    <button id="toggleTable"
-                        class="text-blue-600 font-medium cursor-pointer hover:bg-gray-100 px-4 py-2 rounded focus:ring-4 focus:ring-gray-200">
-                        Tampilkan detail ▼
-                    </button>
-                </div>
-
                 <!-- Tabel Perbandingan -->
-                <div id="comparisonTable" class="overflow-x-auto bg-white p-6 rounded-lg shadow hidden">
+                <div class="overflow-x-auto bg-white p-6 rounded-lg shadow mt-4">
                     <div class="w-full">
                         <table class="w-full min-w-max border-collapse text-sm sm:text-base">
                             <thead>
