--- a/iproc-2-go.html
+++ b/iproc-2-go.html
@@ -386,7 +386,7 @@
             </div>
         </section>
     </main>
-    <footer class="p-20 bg-[#005db5] text-white">
+    <footer class="px-10 pt-20 pb-10 bg-[#005db5] text-white">
         <div class="grid grid-cols-3 gap-10 ">
             <div>
                 <img src="./lib/img/iproc-white.svg" class="w-30 mb-5" alt="iProc Logo">
@@ -410,7 +410,7 @@
                 </div>
                 <p class="text-base sm:text-lg font-bold mb-5">Katri Iskandar</p>
                 <div class="flex gap-4 mb-5">
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-6 h-6 text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path
@@ -421,7 +421,7 @@
                     <a href="mailto:katri@adw.co.id">katri@adw.co.id</a>
                 </div>
                 <div class="flex gap-4 mb-5">
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                    <svg class="w-6 h-6 text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path
@@ -440,10 +440,10 @@
         </div>
         <hr class="border-white my-10">
         <div class="flex justify-between">
-            <span>Copyright © 2024 All rights reserved - IProc ADW ID | Terms & Conditions</span>
+            <span class="text-sm sm:text-base">Copyright © 2024 All rights reserved - IProc ADW ID | Terms & Conditions</span>
             <div class="flex gap-4">
-                <a href="https://www.youtube.com/@adwconsulting6136" class="border-2 border-white p-2 rounded-full">
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                <a href="https://www.youtube.com/@adwconsulting6136" class="border-1 border-white p-2 rounded-full">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -452,8 +452,8 @@
                     </svg>
                 </a>
                 <a href="https://id.linkedin.com/company/anggada-duta-wisesa-pt"
-                    class="border-2 border-white p-2 rounded-full">
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                    class="border-1 border-white p-2 rounded-full">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -462,16 +462,16 @@
                         <path d="M7.2 8.809H4V19.5h3.2V8.809Z" />
                     </svg>
                 </a>
-                <a href="https://x.com/adw_consulting" class="border-2 border-white p-2 rounded-full">
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                <a href="https://x.com/adw_consulting" class="border-1 border-white p-2 rounded-full">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path
                             d="M13.795 10.533 20.68 2h-3.073l-5.255 6.517L7.69 2H1l7.806 10.91L1.47 22h3.074l5.705-7.07L15.31 22H22l-8.205-11.467Zm-2.38 2.95L9.97 11.464 4.36 3.627h2.31l4.528 6.317 1.443 2.02 6.018 8.409h-2.31l-4.934-6.89Z" />
                     </svg>
                 </a>
-                <a href="https://www.facebook.com/ADWConsulting/" class="border-2 border-white p-2 rounded-full">
-                    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                <a href="https://www.facebook.com/ADWConsulting/" class="border-1 border-white p-2 rounded-full">
+                    <svg class="w-4 h-4 text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
