--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -171,27 +171,27 @@
                 <div class="grid grid-cols-2 lg:grid-cols-4 gap-6">
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800">
                         <img src="lib/img/iproc cloud/logo solve 1.svg" class="mb-5" alt="Biaya Besar" />
-                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-lg">
+                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Masih membutuhkan biaya besar untuk infrastruktur dan
                             pemeliharaan sistem?
                         </p>
                     </div>
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="lib/img/iproc cloud/logo solve 2.svg" class="mb-5" alt="Implementasi Rumit" />
-                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-lg">
+                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
                         </p>
                     </div>
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <img src="lib/img/iproc cloud/logo solve 3.svg" class="mb-5" alt="Akses Terbatas" />
-                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-lg">
+                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Akses terbatas hanya di jaringan internal, tidak fleksibel
                             untuk tim yang bekerja dari berbagai lokasi?
                         </p>
                     </div>
                     <div class="flex flex-col items-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                         <img src="lib/img/iproc cloud/logo solve 4.svg" class="mb-5" alt="Implementasi Lama" />
-                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-lg">
+                        <p class="text-gray-800 font-semibold text-center text-sm sm:text-xl">
                             Implementasi sistem terasa rumit dan memakan waktu?
                         </p>
                     </div>
@@ -290,12 +290,12 @@
                 </h2>
                 <div class="grid md:grid-cols-2 gap-10">
                     <div>
-                        <div class="bg-blue-400 rounded-2xl p-4 overflow-hidden">
+                        <div class="bg-[#48ACE1] rounded-2xl p-4 overflow-hidden">
                             <img src="./lib/img/iproc cloud/fitur-1.png" data-aos="zoom-in-up" data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5"
                                 alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-xl font-semibold text-gray-900">Vendor Registration &
+                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">Vendor Registration &
                                 Onboarding
                             </h3>
                             <p class="text-base text-gray-500 mt-2">
@@ -304,12 +304,12 @@
                         </div>
                     </div>
                     <div>
-                        <div class="bg-yellow-400 rounded-2xl p-4 overflow-hidden">
+                        <div class="bg-[#FFBC50] rounded-2xl p-4 overflow-hidden">
                             <img src="./lib/img/iproc cloud/fitur-2.png" data-aos="zoom-in-up" data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5"
                                 alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-xl font-semibold text-gray-900">Publikasi Pengumuman Lelang /
+                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">Publikasi Pengumuman Lelang /
                                 Tender</h3>
                             <p class="text-base text-gray-500 mt-2">
                                 Memungkinkan pengumuman lelang dapat diakses oleh vendor yang lebih luas.
@@ -317,12 +317,12 @@
                         </div>
                     </div>
                     <div>
-                        <div class="bg-yellow-400 rounded-2xl p-4 overflow-hidden">
+                        <div class="bg-[#FFBC50] rounded-2xl p-4 overflow-hidden">
                             <img src="./lib/img/iproc cloud/fitur-3.png" data-aos="zoom-in-up" data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5"
                                 alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-xl font-semibold text-gray-900">Market Survey/RFI</h3>
+                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">Market Survey/RFI</h3>
                             <p class="text-base text-gray-600 mt-2">
                                 Memfasilitabase pengumpula5 informasi dari vendor potensial untuk pengambilan keputusan
                                 yang lebih baik.
@@ -330,12 +330,12 @@
                         </div>
                     </div>
                     <div>
-                        <div class="bg-blue-400 rounded-2xl p-4 overflow-hidden">
+                        <div class="bg-[#48ACE1] rounded-2xl p-4 overflow-hidden">
                             <img src="./lib/img/iproc cloud/fitur-4.png" data-aos="zoom-in-up" data-aos-duration="800" class="mx-auto relative -bottom-4 w-4/5"
                                 alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-xl font-semibold text-gray-900">eBidding</h3>
+                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">eBidding</h3>
                             <p class="text-base text-gray-600 mt-2">
                                 Proses pengbaseaan secara 5lektronik dari permintaan pengadaan, undangan ke vendor,
                                 evaluasi sampai dengan penunjukan pemenang.
