--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -293,7 +293,7 @@
         </section>
         <section id="features" class="feature py-24">
             <div class="max-w-screen-2xl mx-auto px-4 relative">
-                <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-8 text-center">
+                <h2 class="text-2xl sm:text-4xl! font-bold text-white mb-8 text-center">
                     Fitur Lengkap untuk Mendukung Pengadaan Modern
                 </h2>
                 <div class="grid md:grid-cols-2 gap-10">
@@ -303,10 +303,10 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">Vendor Registration &
+                            <h3 class="text-base sm:text-2xl font-semibold text-white">Vendor Registration &
                                 Onboarding
                             </h3>
-                            <p class="text-base text-gray-500 mt-2">
+                            <p class="text-base text-white mt-2">
                                 Mempermudah proses pendaftaran vendor baru dengan sistem otomatis.
                             </p>
                         </div>
@@ -317,9 +317,9 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">Publikasi Pengumuman Lelang /
+                            <h3 class="text-base sm:text-2xl font-semibold text-white">Publikasi Pengumuman Lelang /
                                 Tender</h3>
-                            <p class="text-base text-gray-500 mt-2">
+                            <p class="text-base text-white mt-2">
                                 Memungkinkan pengumuman lelang dapat diakses oleh vendor yang lebih luas.
                             </p>
                         </div>
@@ -330,8 +330,8 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">Market Survey/RFI</h3>
-                            <p class="text-base text-gray-600 mt-2">
+                            <h3 class="text-base sm:text-2xl font-semibold text-white">Market Survey/RFI</h3>
+                            <p class="text-base text-white mt-2">
                                 Memfasilitabase pengumpula5 informasi dari vendor potensial untuk pengambilan keputusan
                                 yang lebih baik.
                             </p>
@@ -343,8 +343,8 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-gray-900">eBidding</h3>
-                            <p class="text-base text-gray-600 mt-2">
+                            <h3 class="text-base sm:text-2xl font-semibold text-white">eBidding</h3>
+                            <p class="text-base text-white mt-2">
                                 Proses pengbaseaan secara 5lektronik dari permintaan pengadaan, undangan ke vendor,
                                 evaluasi sampai dengan penunjukan pemenang.
                             </p>
