--- a/iproc-2-go.html
+++ b/iproc-2-go.html
@@ -28,11 +28,11 @@
     <meta name="twitter:image" content="https://iproc.id/assets/img/og.png" />
     <title>iProc 2Go</title>
     <link rel="shortcut icon" href="lib/img/iproc-2-go/iproc-2-go.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="lib/css/iproc-2-go.css" defermedia="screen" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <link rel="stylesheet" href="lib/css/output.css" />
     <link rel="stylesheet" href="lib/css/flowbite.min.css" />
     <link rel="stylesheet" href="lib/css/style.css">
+    <link rel="stylesheet" href="lib/css/iproc-2-go.css" defermedia="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -134,7 +134,7 @@
     </nav>
 
     <main>
-        <section id="home" class="hero pt-40 overflow-hidden">
+        <section id="home" class="hero pt-22 md:pt-40 overflow-hidden">
             <div class="max-w-screen-2xl mx-auto px-4 md:px-0 grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
                 <div class="col-span-6">
                     <img class="mb-4 mx-auto sm:mx-0 w-1/5" src="lib/img/iproc-2-go/iproc-2-go.svg"
