--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -29,11 +29,11 @@
     <meta name="twitter:image" content="https://iproc.id/assets/img/og.png" />
     <title>iProc cloud</title>
     <link rel="shortcut icon" href="lib/img/Iproc cloud.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="lib/css/iproc-cloud.css" defermedia="screen" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <link rel="stylesheet" href="lib/css/output.css" />
     <link rel="stylesheet" href="lib/css/flowbite.min.css" />
     <link rel="stylesheet" href="lib/css/style.css">
+    <link rel="stylesheet" href="lib/css/iproc-cloud.css" defermedia="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -139,7 +139,7 @@
         </div>
     </nav>
     <main>
-        <section id="home" class="hero pt-20">
+        <section id="home" class="hero pt-22">
             <div class="max-w-screen-2xl mx-auto px-4 md:px-0">
                 <div class="relative -bottom-20">
                     <img class="mb-8 mx-auto w-72" src="lib/img/Iproc cloud.svg" alt="iProc Cloud Logo" />
@@ -621,7 +621,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="bottom pt-20 px-4 relative overflow-hidden mb-20">
+        <section id="contact" class="bottom px-4 relative overflow-hidden mb-20">
             <div class="max-w-screen-2xl mx-auto text-center p-15 rounded-4xl">
                 <p class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white mb-8 max-w-2/3">
                     This is the future of e-Procurement.
