iproc cloud illustration responsiveness, hero logo

--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -142,7 +142,7 @@
         <section id="home" class="hero pt-22">
             <div class="max-w-screen-2xl mx-auto px-4 md:px-0">
                 <div class="relative -bottom-20">
-                    <img class="mb-8 mx-auto w-72" src="lib/img/Iproc cloud.svg" alt="iProc Cloud Logo" />
+                    <img class="mb-8 mx-auto w-48 sm:w-72" src="lib/img/Iproc cloud.svg" alt="iProc Cloud Logo" />
                     <h1 class="mb-3 text-2xl text-center sm:text-6xl! font-extrabold text-gray-900">
                         The Next Level of e-Procurement is Here!
                     </h1>
@@ -152,8 +152,8 @@
                         cloud yang fleksibel, aman, dan hemat biaya.
                     </p>
                 </div>
-                <div class="cloud-content relative -bottom-36 overflow-hidden">
-                    <img src="lib/img/iproc cloud/hero-illustration.png" alt="Cloud System Illustration" class="w-full"
+                <div class="cloud-content relative -bottom-36 ">
+                    <img src="lib/img/iproc cloud/hero-illustration.png" alt="Cloud System Illustration" class="w-full scale-150 sm:scale-150 md:scale-100"
                         data-aos="zoom-in-down" data-aos-duration="800" />
                 </div>
 
