features text color, size

--- a/iproc-cloud.html
+++ b/iproc-cloud.html
@@ -297,7 +297,7 @@
         </section>
         <section id="features" class="feature py-24">
             <div class="max-w-screen-2xl mx-auto px-4 relative">
-                <h2 class="text-2xl sm:text-4xl! font-bold text-white mb-8 text-center">
+                <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-8 text-center">
                     Fitur Lengkap untuk Mendukung Pengadaan Modern
                 </h2>
                 <div class="grid md:grid-cols-2 gap-10">
@@ -307,10 +307,10 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-white">Vendor Registration &
+                            <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">Vendor Registration &
                                 Onboarding
                             </h3>
-                            <p class="text-base text-white mt-2">
+                            <p class="text-base sm:text-lg! text-gray-500 mt-2">
                                 Mempermudah proses pendaftaran vendor baru dengan sistem otomatis.
                             </p>
                         </div>
@@ -321,9 +321,9 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-white">Publikasi Pengumuman Lelang /
+                            <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">Publikasi Pengumuman Lelang /
                                 Tender</h3>
-                            <p class="text-base text-white mt-2">
+                            <p class="text-base sm:text-lg! text-gray-500 mt-2">
                                 Memungkinkan pengumuman lelang dapat diakses oleh vendor yang lebih luas.
                             </p>
                         </div>
@@ -334,8 +334,8 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-white">Market Survey/RFI</h3>
-                            <p class="text-base text-white mt-2">
+                            <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">Market Survey/RFI</h3>
+                            <p class="text-base sm:text-lg! text-gray-500 mt-2">
                                 Memfasilitasi pengumpulan informasi dari vendor potensial untuk pengambilan keputusan
                                 yang lebih baik.
                             </p>
@@ -347,8 +347,8 @@
                                 class="mx-auto relative -bottom-4 w-4/5" alt="Fitur Desktop 1">
                         </div>
                         <div class="mt-4">
-                            <h3 class="text-base sm:text-2xl font-semibold text-white">eBidding</h3>
-                            <p class="text-base text-white mt-2">
+                            <h3 class="text-base sm:text-2xl! font-semibold text-gray-900">eBidding</h3>
+                            <p class="text-base sm:text-lg! text-gray-500 mt-2">
                                 Proses pengbaseaan secara elektronik dari permintaan pengadaan, undangan ke vendor,
                                 evaluasi sampai dengan penunjukan pemenang.
                             </p>
